feat: add integration with counter-service
