# internal/model/models.go
@@ -109,3 +109,17 @@ type DeletePostFromFeedCacheCommand struct {
 type RecreateFeedCacheCommand struct {
 	UserId UserId
 }
+
+type NewGetUnreadCountTotalCommand struct {
+	UserId UserId
+}
+
+type NewGetUnreadCountCommand struct {
+	CurrentUserId UserId
+	ChatUserId    UserId
+}
+
+type MarkMessagesAsReadCommand struct {
+	UserId     UserId
+	MessageIds []MessageId
+}
